# party_player

./: .env.example  LICENSE  README.md  docker-compose.yaml  package-lock.json
bot/: .env.example  .gitignore  Dockerfile  README.md  logger_config.yml  main.py
bot/dal/: redis_db.py
bot/sound_bot/: bot.py  logger.py
bot/youtuber/: youtuber.py
client/: .dockerignore  .env.example  Dockerfile  default.conf  default_nginx.conf  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.css  App.js  README.adoc  index.js
client/src/components/: AudioRedactor.js  BrandLogo.js  FileBar.js  FileCard.js  FileInfo.js  FileUploader.js  Footer.js  Header.js  MicRecorder.js  RecentFiles.js  SideTab.js  Tiers.js  YouTuber.js  constants.js  customLevel.js  micWave.js
client/src/pages/: AboutPage.js  HomePage.js  LandingPage.js  LoginPage.js  PageNotFound.js  ProfilePage.js  RedactorPage.js  RegisterPage.js  TermsOfUsePage.js
server/: Dockerfile  logger_config.yaml  pyproject.toml  requirements.txt
server/app/: dependencies.py  init_db.py  main.py
server/app/audio/: audio_operations.py  models.py  routes.py  service.py
server/app/auth/: jwt_bearer.py  jwt_handler.py  models.py  routes.py  utils.py
server/app/dal/: __init__.py  database.py  mongo_manager.py  redis_db.py  tier_descriptions.sql
server/app/image_service/: routes.py  utils.py
server/app/tiers/: models.py
server/app/url_shortener/: models.py  routes.py
server/app/users/: models.py  routes.py  service.py
server/jobs/: storage_cleaner.py
(+37 files in other folders)
